--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <body>
             <h1> Thids is a header</h1>
             <h2>This is a paragraph</h2>
+        <p> This is the Starting</p>
         </body>
     </head>
 </html>
